fix: removes unnessary scrollbars (#308)

--- a/client/dashboard/app/styles/pages/Project.scss
+++ b/client/dashboard/app/styles/pages/Project.scss
@@ -46,8 +46,7 @@ div.kz-project-module {
   }
 
   .main {
-    padding: 2rem;
-    padding-bottom: 2rem;
+    padding: 1rem;
     flex-basis: 50%;
 
     @include for-mobile-only {
